# micro-cinema

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  docker-compose.yaml  pyproject.toml
cinema/: __main__.py  config.py  context.py  login.py  main.py
cinema/database/: __init__.py  fields.py  models.py
cinema/handlers/: __init__.py  control.py  video.py
cinema/misc/: clock.py  context.py  permissions.py  utils.py
